--- a/SimpleCodingAssignmentsWebApp/Views/Home/About.cshtml
+++ b/SimpleCodingAssignmentsWebApp/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Page";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Web app to implement Coding 101 exercises for proof that I can code</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>...since 10+ years in the industry and a Master's in Computer Engineering doesn't seem to be good enough for some people.</p>
